noinst_LTLIBRARIES = libdisplay.la
libdisplay_la_SOURCES = graphdev.h graphdev.cpp fbdev.cpp fblinear15.cpp fblinear16.cpp fblinear24.cpp fblinear32.cpp fblinear4.cpp fblinear8.cpp fbvgaplanes.cpp lrmi.c vgadev.cpp \
                       fbdev.h fblinear15.h fblinear16.h fblinear24.h fblinear32.h fblinear4.h fblinear8.h fbvgaplanes.h lrmi.h vgadev.h
libdisplay_la_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/font -fPIC


